<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_30sdp"
    android:paddingRight="@dimen/_30sdp"
    tools:context=".PaymentActivity">

        <!-- Checkout section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout_header"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:textSize="@dimen/_15ssp"
                    android:gravity="bottom"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="@dimen/_115sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_column_header"
                    android:textSize="@dimen/_15ssp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_column_header"
                    android:textSize="@dimen/_15ssp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/price_column_header"
                    android:textSize="@dimen/_15ssp"
                    android:layout_gravity="end"/>
            </TableRow>

            <!-- draw horizontal line -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray_line"/>

            <TableRow>
                <TableLayout
                    android:layout_width="@dimen/_115sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cart1a">
                </TableLayout>
                <TableLayout
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cart1b">
                </TableLayout>
                <TableLayout
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cart1c">
                </TableLayout>
            </TableRow>
        </TableLayout>

        <!-- draw horizontal line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray_line"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="@dimen/_185sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15ssp"
                    android:gravity="end"/>
                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/total"
                    android:textSize="@dimen/_15ssp"
                    android:gravity="end"/>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"/>

        <!-- Payment section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_header"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/payment_method">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mastercard_visa"
                android:textSize="@dimen/_10ssp"
                android:id="@+id/mastervisa"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paylah"
                android:textSize="@dimen/_10ssp"
                android:id="@+id/paylah"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow"
                android:textSize="@dimen/_10ssp"
                android:id="@+id/paynow"/>
        </RadioGroup>

        <Button
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_65sdp"
            android:text="@string/checkout_header"
            android:id="@+id/checkout_button"
            android:textSize="@dimen/_15ssp"
            android:layout_gravity="center"
            android:backgroundTint="@color/round_button"
            app:cornerRadius="@dimen/_7sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"/>
    </LinearLayout>
</ScrollView>