<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="@dimen/_10sdp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stall_name"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:text="@string/name_column_header"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="wrap_content"
            android:text="@string/unit_column_header"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_column_header"
            android:textSize="@dimen/_12ssp"
            android:gravity="end"
            android:fontFamily="@font/montserrat_bold"/>
    </TableRow>

    <!-- draw horizontal line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/gray_line"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_b"/>

    <!-- draw horizontal line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/gray_line"/>
</LinearLayout>